fixed font and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -145,11 +145,11 @@
     * Generics
     * *****************************************/
     h1 {
-        font-size: 3.5rem;
+        font-size: 4rem;
     }
 
     h2 {
-        font-size: 3rem;
+        font-size: 3.5rem;
     }
 
     h5 {
